$Id$                       -*-text-*-


**** 0.66 NOT RELEASED YET


Feature HIP RR

    Added support for the HIP RR, RFC5205
    perldoc Net::DNS::RR::HIP for more information.


Fix rt.cpan.org #50883
    This is basically #11931 but for cygwin.

    Codepath in Cygwin and Win32 are now the same. This adds a
    dependency in cygwin.
    Acknowledgements "mikaraento"

Fix rt.cpan.org #45407 and #43190
    Fixed escaping of semicolon.

    Note a change in behavior: 
    For TXT and SPF the rdatastr method (and therefore the
    print, and string method) returns the escaped format while the 
    chr_str_list method will return unescaped format.


Fix rt.cpan.org #43393
    Typo in 01-resolver.t

Fix rt.cpan.org #43273
    Added check for unitialized opcode in headermask in
    Nameserver.pm

Fix rt.cpan.org #46635
    Minor documentation error in opt.pm

Fix rt.cpan.org #51009
     Fixed handling of empty string in Net::DNS::stripdot. 
     Elegant one-liner supplied by JMEHNLE.

Fix rt.cpan.org #49035

    Comment parsing fixed: Semicolon in character string blocks (such
    as in TXT and NPTR) were only recognized when escaped.
    Also fixed the NAPTR regular expression to not interpret 
    "bla' 'foo" as two strings bla and foo, but as one: bla' 'foo

Fix cd flag settings 

    Resolver bug and fix reported by Jon Haidu.


**** 0.65 January 26, 2009

Fix rt.cpan.org #41076

    When the AAAA object was constructed with new_from_hash with an
    address containing the "::" shorthand notation normalization was
    not done properly.

Fix rt.cpan.org #42375

    Typo in Win32.pm Registry root.



**** 0.64 December 30, 2008

Feature rt.cpan.org #36656

    Added support for the APL record (RFC 3123)
    The module consists of a list of Address Prefix Item objects
    as defined in the Net::DNS::RR::APL::ApItem class.
    NOTE: Class and its interface may be subject to change.

    
Fix rt.cpan.org #11931 Wrong nameserver list handling in