@@ -33,7 +33,6 @@ sub new_from_string {
 	    && ($2 >= 0) && ($2 <= 255)
 	    && ($3 >= 0) && ($3 <= 255)
 	    && ($4 >= 0) && ($4 <= 255) ) {
-
 		$self->{"address"} = "$1.$2.$3.$4";
 	}
 
